erDiagram
  USUARIO }o--o| ROLENTITY : "tiene rol"
  USUARIO }o--o| OFICINA : "pertenece a"
  USUARIO ||--o{ DISPOSITIVOUSUARIO : "registra"
  SOLICITUDEVENTO }o--|| OFICINA : "de"
  SOLICITUDEVENTO }o--o| TIPOEVENTOCATALOGO : "clasifica"
  SOLICITUDEVENTO }o--|| USUARIO : "solicita"
  SOLICITUDEVENTO }o--o| USUARIO : "revisa"
  SOLICITUDEVENTO }o--o{ LUGARFISICO : "usa"
  SOLICITUDEVENTO ||--o{ SOLICITUDEVENTOPARTICIPANTE : "incluye"
  SOLICITUDEVENTO ||--o{ PUBLICACIONEVENTO : "genera"
  PUBLICACIONEVENTO }o--|| USUARIO : "publica"
  SOLICITUDANUNCIO }o--o| OFICINA : "de"
  SOLICITUDANUNCIO }o--|| USUARIO : "solicita"
  SOLICITUDANUNCIO }o--o| USUARIO : "revisa"
  SOLICITUDANUNCIO }o--o{ LUGARFISICO : "usa"
  SOLICITUDANUNCIO ||--o{ PUBLICACIONANUNCIO : "genera"
  PUBLICACIONANUNCIO }o--|| USUARIO : "publica"
  REPORTEGENERADO }o--|| USUARIO : "genera"
